# SlicerNNInteractive

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  log.out
.github/workflows/: check-utf8.yml
nninteractive_server/: Dockerfile  build.sh  run.sh  sam2_numpy_predictor.py  samurai_server.py
server/: Dockerfile  build.sh  nninteractive_slicer_server.py  pyproject.toml  requirements.txt  run.sh  samurai_server.py
server/nninteractive_slicer_server/: main.py
slicer_plugin/: CMakeLists.txt
slicer_plugin/NNInteractiveSlicer/: CMakeLists.txt  NNInteractiveSlicer.py
slicer_plugin/NNInteractiveSlicer/Resources/UI/: NNInteractiveSlicer.ui
slicer_plugin/SAMurai/: CMakeLists.txt  SAMurai.py
slicer_plugin/SAMurai/Resources/UI/: SAMurai.ui
slicer_plugin/SlicerNNInteractive/: CMakeLists.txt  SlicerNNInteractive.py
slicer_plugin/SlicerNNInteractive/Resources/UI/: SlicerNNInteractive.ui
slicer_plugin/nnInteractiveSlicer/: CMakeLists.txt  nnInteractiveSlicer.py
slicer_plugin/nnInteractiveSlicer/Resources/UI/: NNInteractiveSlicer.ui  nnInteractiveSlicer.ui
